# GeoTileViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
assets/images/: CMakeLists.txt
assets/translations/: CMakeLists.txt  GeoTileViewer_en.ts  GeoTileViewer_ru.ts
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
qml/: CMakeLists.txt
qml/ui/: InfoPane.qml  Main.qml
source/: coordinates_converter.cpp  coordinates_converter.hpp  keychain_dao.cpp  keychain_dao.hpp  lib.cpp  lib.hpp  main.cpp  translation_controller.cpp
source/config/: project_description.h  translations.h
test/: CMakeLists.txt
test/source/: GeoTileViewer_test.cpp
